--- a/src/components/TreeNode.css
+++ b/src/components/TreeNode.css
@@ -1,8 +1,49 @@
-.tree-of-nodes-checkbox {
+.ton-checkbox {
   margin-right: 3px;
   margin-top: 3px;
 }
 
-.tree-of-nodes-expander {
+.ton-expander {
   margin-bottom: 4px;
+}
+
+.ton-child {
+  margin-left: 16px;
+  display: block;
+  opacity: 1;
+  transition: opacity 0.6s linear;
+}
+
+.ton-collapsible-wrapper {
+  display: flex;
+  overflow: hidden;
+}
+.ton-collapsible-wrapper:after {
+  content: '';
+  height: 20px;
+  transition: height 0.3s linear, max-height 0s 0.3s linear;
+  max-height: 0px;
+}
+.ton-collapsible {
+  transition: margin-bottom 0.3s cubic-bezier(0, 0, 0, 1);
+  margin-bottom: 0;
+  max-height: 10000px;
+}
+.ton-collapsible-wrapper.collapsed > .ton-collapsible {
+  margin-bottom: -2000px;
+  transition: margin-bottom 0.3s cubic-bezier(1, 0, 1, 1), visibility 0s 0.3s, max-height 0s 0.3s;
+  visibility: hidden;
+  max-height: 0;
+}
+.ton-collapsible-wrapper.collapsed:after {
+  height: 0;
+  transition: height 0.3s linear;
+  max-height: 20px;
+}
+.ton-collapsible-wrapper.collapsed {
+  visibility: hidden;
+}
+.ton-collapsible-wrapper.collapsed .ton-child {
+  opacity: 0;
+  transition: opacity 0.6s linear;
 }
