--- a/src/components/TreeNode.css
+++ b/src/components/TreeNode.css
@@ -19,9 +19,11 @@
   overflow: hidden;
 }
 .ton-collapsible-wrapper:after {
-  content: '';
+  content: "";
   height: 20px;
-  transition: height 0.3s linear, max-height 0s 0.3s linear;
+  transition:
+    height 0.3s linear,
+    max-height 0s 0.3s linear;
   max-height: 0px;
 }
 .ton-collapsible {
@@ -31,7 +33,10 @@
 }
 .ton-collapsible-wrapper.collapsed > .ton-collapsible {
   margin-bottom: -2000px;
-  transition: margin-bottom 0.3s cubic-bezier(1, 0, 1, 1), visibility 0s 0.3s, max-height 0s 0.3s;
+  transition:
+    margin-bottom 0.3s cubic-bezier(1, 0, 1, 1),
+    visibility 0s 0.3s,
+    max-height 0s 0.3s;
   visibility: hidden;
   max-height: 0;
 }
